--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -80,22 +80,26 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.4</version>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
+                    <descriptorRefs>
+                        <!-- This tells Maven to include all dependencies -->
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
                     <archive>
-                        <!-- Configures the content of the created manifest -->
                         <manifest>
-                            <!-- Adds the classpath to the created manifest -->
-                            <addClasspath>true</addClasspath>
-                            <!-- Specifies that all dependencies of our application are found -->
-                            <!-- Configures the main class of the application -->
                             <mainClass>app.Application</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
-
             </plugin>
         </plugins>
     </build>
